# ipwatch

./: .gitignore  README.md  example_config.txt  ipwatch.nix  ipwatch.py  pyproject.toml  ssmtp_example.conf  test_config.txt
.github/workflows/: tests.yml
ipwatch/: README.md  example_config.txt  pyproject.toml
ipwatch/src/ipwatch/: __init__.py  __main__.py  ipgetter.py  ipwatch.py
nix/: ipwatch.nix  python3-ipwatch.nix  result  service.nix  shell.nix
python/: pyproject.toml
python/src/ipwatch/: ipgetter.py
python/tests/: __init__.py  test_config.py
src/ipwatch/: __about__.py  __init__.py  ipgetter.py  ipwatch.py
tests/: test_config.py  test_ipgetter.py  test_ipwatch.py
